--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <link rel="stylesheet" href="./styles/style.css" class="css">
 </head>
 <body>
-    
+    <header>
+        <h3>Influencer products</h3>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign Up</a></li>
+                <li><a href="">Log in</a></li>
+            </ul>
+        </nav>
+        
+    </header>
+    <main>
+        <!-- header banner section starts here -->
+        <section class="header-banner">
+            <div class="header-banner-text">
+                <h1>Start Your Journey as <br> Influencer</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis at iusto inventore dolorum vitae tenetur sequi quam temporibus alias blanditiis.</p>
+                <div class="btn-primary">
+                    <button>Prebook Now</button>
+                </div>
+            </div>
+            <div class="header-banner-img">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </section>
+        <!-- header banner section ends here -->
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
