--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h3>Influencer products</h3>
+        <h3 class="header-title">Influencer products</h3>
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
@@ -23,10 +23,10 @@
         <!-- header banner section starts here -->
         <section class="header-banner">
             <div class="header-banner-text">
-                <h1>Start Your Journey as <br> Influencer</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis at iusto inventore dolorum vitae tenetur sequi quam temporibus alias blanditiis.</p>
-                <div class="btn-primary">
-                    <button>Prebook Now</button>
+                <h1 class="header-banner-title">Start Your Journey as <br> Influencer</h1>
+                <p class="header-banner-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis at iusto inventore dolorum vitae tenetur sequi quam temporibus alias blanditiis.</p>
+                <div >
+                    <button class="btn-primary">Prebook Now</button>
                 </div>
             </div>
             <div class="header-banner-img">
@@ -34,9 +34,99 @@
             </div>
         </section>
         <!-- header banner section ends here -->
+        <!-- companies section start here -->
+        <section class="company-logos">
+            <hr>
+            <img src="./logos/Alibaba.svg" alt="">
+            <img src="./logos/Amazon.svg" alt="">
+            <img src="./logos/Daraz.pk Logo.svg" alt="">
+            <img src="./logos/Ebay.svg" alt="">
+            <img src="./logos/Rakuten.svg" alt="">
+            <img src="./logos/Walmart.svg" alt="">
+            <img src="./logos/Target.svg" alt="">
+            <hr>
+        </section>
+        <!-- companies section end here -->
+        <!-- collections section starts here -->
+        <section class="popular-collection">
+            <h3 class="collection-title">Popular Collection</h3>
+            <div class="collection-cards">
+                <div class="collection-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/mic.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/airpod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/drone.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/lights.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/action.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/camera.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/camera.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                <div class="collection-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h3>$ 50.48</h3>
+                    <p>Worldwide shifting</p>
+                </div>
+                
+            </div>
+            <h3 class="pupular-btn">See More.....</h3>
+        </section>
+        <!-- collections section ends here -->
+        <!-- featured products section starts here -->
+        <div class="featured-products">
+            <div class="featured-img">
+                <img src="./images/gear.png" alt="">
+            </div>
+            <div class="featured-text">
+                <h3>Featured products at one place</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, nisi? Aliquam excepturi vitae maiores nulla voluptatem molestias rem, eos at consequuntur corporis explicabo modi omnis, beatae temporibus nesciunt delectus. Voluptatum!</p>
+                <button class="btn-gear">Join Now</button>
+            </div>
+        </div>
+        <!-- featured products section ends here -->
     </main>
-    <footer>
-
+    <footer class="footer">
+        <h3>Influencer Products</h3>
+        <p>Copyright &copy 2020 influencer products</p>
+        <p>All rights reserved</p>
     </footer>
 </body>
 </html>
